[gd_scene load_steps=20 format=3 uid="uid://de2tij5n0gsdl"]

[ext_resource type="Script" path="res://scripts/GameWorld.gd" id="1_0gmpp"]
[ext_resource type="Texture2D" uid="uid://5bthdn3vdq2n" path="res://sprites/background.png" id="2_whdnp"]
[ext_resource type="Texture2D" uid="uid://clgndpp8lvgil" path="res://sprites/ship.png" id="3_n1uur"]
[ext_resource type="PackedScene" uid="uid://dcxqqejnc1bks" path="res://assests/Projectile.tscn" id="4_8k5u5"]
[ext_resource type="PackedScene" uid="uid://c3iaqn3od4auw" path="res://assests/Player.tscn" id="5_5rypm"]
[ext_resource type="Theme" uid="uid://btkvtpbxcxmim" path="res://default.tres" id="6_lsw7k"]
[ext_resource type="Texture2D" uid="uid://b7eb7wyfqm8yh" path="res://sprites/balloon-icon.png" id="6_ten2m"]
[ext_resource type="Texture2D" uid="uid://lryuq3u4boco" path="res://sprites/pause.png" id="8_60hay"]
[ext_resource type="AudioStream" uid="uid://btveyyrfcsidb" path="res://audio/floating-cat-bg.mp3" id="8_bw2e4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a4yr5"]
atlas = ExtResource("3_n1uur")
region = Rect2(0, 0, 190, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_cl5d4"]
atlas = ExtResource("3_n1uur")
region = Rect2(190, 0, 190, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1d5n"]
atlas = ExtResource("3_n1uur")
region = Rect2(380, 0, 190, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_vm1oa"]
atlas = ExtResource("3_n1uur")
region = Rect2(570, 0, 190, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_at5y3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4yr5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cl5d4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1d5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vm1oa")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w5mhm"]
size = Vector2(172, 22)

[sub_resource type="SegmentShape2D" id="1"]
a = Vector2(4, -61)
b = Vector2(3, 291)

[sub_resource type="SegmentShape2D" id="2"]
a = Vector2(261.48, -22)
b = Vector2(-261.065, -21.3578)

[sub_resource type="SegmentShape2D" id="3"]
a = Vector2(-262.52, 314)
b = Vector2(-261.52, -37)

[sub_resource type="SegmentShape2D" id="4"]
a = Vector2(-262.52, 402)
b = Vector2(262, 402)

[node name="GameWorld" type="Node2D"]
script = ExtResource("1_0gmpp")
metadata/_edit_vertical_guides_ = [335.0, 385.0, 435.0, 285.0]

[node name="bg" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_whdnp")
centered = false

[node name="ShipContainer" type="Node2D" parent="."]
position = Vector2(360, 18)

[node name="Ship" type="AnimatedSprite2D" parent="ShipContainer"]
sprite_frames = SubResource("SpriteFrames_at5y3")
autoplay = "default"
frame = 2
frame_progress = 0.259943

[node name="Projectile" parent="ShipContainer" instance=ExtResource("4_8k5u5")]
position = Vector2(-75, 20)

[node name="Projectile2" parent="ShipContainer" instance=ExtResource("4_8k5u5")]
position = Vector2(-25, 20)

[node name="Projectile3" parent="ShipContainer" instance=ExtResource("4_8k5u5")]
position = Vector2(25, 20)

[node name="Projectile4" parent="ShipContainer" instance=ExtResource("4_8k5u5")]
position = Vector2(75, 20)

[node name="ShipDetetctionArea" type="Area2D" parent="ShipContainer"]
position = Vector2(0, -4)

[node name="ShipCollision" type="CollisionShape2D" parent="ShipContainer/ShipDetetctionArea"]
shape = SubResource("RectangleShape2D_w5mhm")

[node name="Player" parent="." instance=ExtResource("5_5rypm")]
position = Vector2(64, 146)

[node name="DestroyOutsideThis" type="Area2D" parent="."]
position = Vector2(261.52, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DestroyOutsideThis"]
position = Vector2(258.48, 23)
shape = SubResource("1")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DestroyOutsideThis"]
position = Vector2(0, -15)
shape = SubResource("2")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="DestroyOutsideThis"]
shape = SubResource("3")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="DestroyOutsideThis"]
position = Vector2(-0.519989, -88)
shape = SubResource("4")

[node name="BalloonSpawnTimer" type="Timer" parent="."]
wait_time = 2.5
autostart = true

[node name="LoseTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="InfiniteLevelTimer" type="Timer" parent="."]
editor_description = "Timer for infinite game mode, This helps prgressively increasing level difficulty "
wait_time = 30.0

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme = ExtResource("6_lsw7k")

[node name="CenterContainer" type="CenterContainer" parent="HUD"]
layout_mode = 2
offset_right = 480.0
offset_bottom = 270.0
metadata/_edit_lock_ = true

[node name="EndGameContainer" type="VBoxContainer" parent="HUD/CenterContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
alignment = 1

[node name="EndGameBoardLabel" type="Label" parent="HUD/CenterContainer/EndGameContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
text = "Dummy Text which is really long"
horizontal_alignment = 1
uppercase = true

[node name="CenterContainer" type="CenterContainer" parent="HUD/CenterContainer/EndGameContainer"]
layout_mode = 2

[node name="EndGameBoardButton" type="Button" parent="HUD/CenterContainer/EndGameContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Play Again"

[node name="PausePanelContainer" type="PanelContainer" parent="HUD/CenterContainer"]
unique_name_in_owner = true
process_mode = 2
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HUD/CenterContainer/PausePanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/CenterContainer/PausePanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="PausedLabel" type="Label" parent="HUD/CenterContainer/PausePanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Game Paused"
horizontal_alignment = 1

[node name="KeepPlayingButton" type="Button" parent="HUD/CenterContainer/PausePanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Keep Playing"

[node name="RetryLevelButton" type="Button" parent="HUD/CenterContainer/PausePanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Retry Level"

[node name="MainMenuButton" type="Button" parent="HUD/CenterContainer/PausePanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="MarginContainer" type="MarginContainer" parent="HUD"]
layout_mode = 0
offset_right = 148.0
offset_bottom = 25.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5
metadata/_edit_lock_ = true

[node name="ScoreBoard" type="HBoxContainer" parent="HUD/MarginContainer"]
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="HUD/MarginContainer/ScoreBoard"]
custom_minimum_size = Vector2(100, 10)
layout_mode = 2
size_flags_vertical = 4
value = 30.0
show_percentage = false

[node name="MarginContainer" type="MarginContainer" parent="HUD/MarginContainer/ScoreBoard"]
layout_mode = 2
theme_override_constants/margin_left = 10

[node name="BalloonIcon" type="TextureRect" parent="HUD/MarginContainer/ScoreBoard"]
modulate = Color(0.933333, 0.113725, 0.113725, 1)
texture_filter = 1
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("6_ten2m")
expand_mode = 1

[node name="ScoreLabel" type="Label" parent="HUD/MarginContainer/ScoreBoard"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 1
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="HUD/MarginContainer/ScoreBoard"]
layout_mode = 2
theme_override_constants/margin_left = 10

[node name="PauseButton" type="Button" parent="HUD/MarginContainer/ScoreBoard"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("8_60hay")
alignment = 0
icon_alignment = 1
vertical_icon_alignment = 0

[node name="LevelLabel" type="Label" parent="HUD"]
texture_filter = 1
layout_mode = 2
offset_right = 480.0
offset_bottom = 270.0
text = "Level 1"
vertical_alignment = 2
uppercase = true
metadata/_edit_lock_ = true

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_bw2e4")
autoplay = true

[connection signal="area_entered" from="ShipContainer/ShipDetetctionArea" to="." method="on_target_reach_ship"]
[connection signal="area_entered" from="DestroyOutsideThis" to="." method="_on_Destroy_area_entered"]
[connection signal="timeout" from="BalloonSpawnTimer" to="." method="on_balloon_timer_timeout"]
[connection signal="timeout" from="LoseTimer" to="." method="_on_LoseTimer_timeout"]
[connection signal="timeout" from="InfiniteLevelTimer" to="." method="progress_infinite_level"]
[connection signal="pressed" from="HUD/CenterContainer/EndGameContainer/CenterContainer/EndGameBoardButton" to="." method="on_target_reach_ship"]
[connection signal="pressed" from="HUD/CenterContainer/PausePanelContainer/MarginContainer/VBoxContainer/KeepPlayingButton" to="." method="_on_keep_playing_button_pressed"]
[connection signal="pressed" from="HUD/CenterContainer/PausePanelContainer/MarginContainer/VBoxContainer/RetryLevelButton" to="." method="reload_level"]
[connection signal="pressed" from="HUD/CenterContainer/PausePanelContainer/MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="HUD/MarginContainer/ScoreBoard/PauseButton" to="." method="pause_game"]
